--- a/public/bag.html
+++ b/public/bag.html
@@ -29,7 +29,6 @@
     <div>Total: <span id="total">0</span> kr</div>
     <button class="pay">CHECK OUT</button>
     </div>
-    <script src="klientenjs/bagNumber.js"></script>
-    <script src="klientenjs/bag.js"></script>
+    <script src="klientenjs/bag.js" type="module"></script>
   </body>
 </html>
