--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,6 @@
       </nav>
     </header>
     <div class="products main-products"></div>
-    <script src="klientenjs/bagNumber.js"></script>
-    <script src="klientenjs/products.js"></script>
+    <script src="klientenjs/products.js"type="module"></script>
   </body>
 </html>
