--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,14 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li>
-            <a href="bag.html"><img src="images/bag.png"/><span id="number">0</span></a>
+            <a href="bag.html"
+              ><img src="images/bag.png" /><span id="number">0</span></a
+            >
           </li>
         </ul>
       </nav>
     </header>
     <div class="products main-products"></div>
-    <script src="klientenjs/products.js"type="module"></script>
+    <script src="klientenjs/products.js" type="module"></script>
   </body>
 </html>
